@@ -21,6 +21,8 @@
 #include "video_examiner.h"
 #include <boost/optional.hpp>
 
+class AVStream;
+
 class FFmpegAudioStream;
 class FFmpegSubtitleStream;
 
