@@ -1,3 +1,8 @@
+2015-06-30  c.hetherington  <cth@carlh.net>
+
+	* Write FFmpeg messages of AV_LOG_WARNING and
+	below to the project's log file.
+
 2015-06-29  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.12 released.
